--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,8 @@ body p {
 
 
 <div class="container">
-<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1NkwyODEzUTdDV2M"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1UnJ5cEtjbXM2NnM" alt="Resume height="739" width="580"</a></li>
+<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1NkwyODEzUTdDV2M">
+<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1UnJ5cEtjbXM2NnM" alt="Resume height="800" width="600"</a></li>
 
 
 
