--- a/resume.html
+++ b/resume.html
@@ -52,9 +52,10 @@ body p {
 </div>
 
 
-<div class="container">
-<li><a href="https://drive.google.com/uc?id=0B6HcEl1I72V1NkwyODEzUTdDV2M">
-<img src="https://drive.google.com/uc?id=0B6HcEl1I72V1UnJ5cEtjbXM2NnM" alt="Resume height="800" width="600"</a></li>
+
+<div class="img_thumb">
+    <a class="images_class" href="https://drive.google.com/uc?id=0B6HcEl1I72V1NkwyODEzUTdDV2M" rel="images"><img src="https://drive.google.com/uc?id=0B6HcEl1I72V1UnJ5cEtjbXM2NnM" alt="img_alt" height="800" width="600" /></a>
+</div>
 
 
 
